--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2629,19 +2629,18 @@ button,
 }
 
 #menu {
-  transform: translateX(20em);
+  transform: translateX(-15em);
   transition: transform 0.5s ease;
   -webkit-overflow-scrolling: touch;
-  background: #21b2a6;
+  background: #161A1D;
   color: #ffffff;
   height: 100%;
   max-width: 80%;
   overflow-y: auto;
   padding: 3em 2em;
   position: fixed;
-  right: 0;
   top: 0;
-  width: 20em;
+  width: 15em;
   z-index: 10002;
 }
 #menu ul {
@@ -2682,8 +2681,8 @@ button,
   display: block;
   height: 3em;
   position: absolute;
-  right: 0;
   top: 0;
+  right: 0;
   vertical-align: middle;
   width: 7em;
 }
@@ -2738,7 +2737,6 @@ body.is-menu-visible #menu {
   height: inherit;
   line-height: inherit;
   position: absolute;
-  right: 0;
   top: 0;
 }
 #header nav > ul {
