--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -17,7 +17,8 @@
 		element-height:		2.75em,
 		element-margin:		2em,
 		letter-spacing:		0.075em,
-		letter-spacing-alt:	0.225em
+		letter-spacing-alt:	0.225em,
+		gutter:				4.5em
 	);
 
 // Font.
