--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -7,6 +7,8 @@
 @import 'fontawesome-all.min.css';
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,800,800italic');
 
+
+
 /*
 	Spectral by HTML5 UP
 	html5up.net | @ajlkn
@@ -835,13 +837,12 @@
 
 		tbody {
 			tr {
-				border: solid 1px _palette(border);
 				border-left: 0;
 				border-right: 0;
 
-				&:nth-child(2n + 1) {
+/* 				&:nth-child(2n + 1) {
 					background-color: _palette(border-bg);
-				}
+				} */
 			}
 		}
 
@@ -1068,7 +1069,9 @@
 
 			img {
 				border-radius: 0;
+				display: block;
 				width: 100%;
+				height: auto;
 			}
 		}
 
@@ -1077,6 +1080,7 @@
 			@include vendor('order', '2');
 			max-width: 48em;
 			width: 60%;
+			margin: auto;
 		}
 
 		&:nth-child(2n) {
@@ -1340,7 +1344,7 @@
 		}
 
 		&.style1 {
-			background-color: #161A1D;
+			background-color: rgba(22, 26, 29, 0.7);
 		}
 
 		&.style2 {
@@ -1721,6 +1725,43 @@
 			}
 		}
 	}
+/* Video */
+#video {
+	@include vendor('display', 'flex');
+	@include vendor('flex-direction', 'column');
+	@include vendor('justify-content', 'center');
+	cursor: default;
+	height: 100vh;
+	min-height: 35em;
+	overflow: hidden;
+	position: relative;
+	text-align: center;
+
+	div.content {
+		position: absolute;
+		left: 37%;
+		bottom: 40px;		
+		
+
+		p {
+			margin-bottom: 1rem;
+			font-size: 44px;		
+			font-family: AT Triumvirate W03 Condensed;
+			color: #68c1ec;
+			font-weight: 500 !important;
+		}
+
+		.button {
+			color: #68c1ec;
+			box-shadow: none;
+		}
+
+
+	}
+
+
+	
+}
 
 /* CTA */
 
@@ -1834,6 +1875,7 @@
 		@include padding(6em, 0);
 		background-color: darken(_palette(bg), 8);
 		text-align: center;
+		padding-top: 1em;
 
 		.icons {
 			font-size: 1.25em;
@@ -1952,8 +1994,19 @@
 	margin: 0 0 0 0;
 	justify-content: center;
 	align-items: center;
-	height: 100vh;
-	background-color:rgba(22, 26, 29, 0.5);
+	height: 80vh;
+	background-color:rgba(22, 26, 29, 0.3);
+
+	header {
+		flex: 0 0 100%;
+		text-align: center;
+		margin-top: 3em;
+
+		h2 {
+			font-size: 44px;
+			font-family: AT Triumvirate W03 Condensed;
+		}
+	}
 
 	article {
 		@include vendor('transition', (
@@ -2005,7 +2058,6 @@
 				left: 0;
 				width: 100%;
 				height: 100%;
-				background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" preserveAspectRatio="none"><style>line { stroke-width: 0.25px; stroke: #ffffff; }</style><line x1="0" y1="0" x2="100" y2="100" /><line x1="100" y1="0" x2="0" y2="100" /></svg>');
 				background-position: center;
 				background-repeat: no-repeat;
 				background-size: 100% 100%;
@@ -2047,6 +2099,14 @@
 			h2 {
 				margin: 0;
 			}
+
+			p.white {
+				color: black;
+			}
+			p.black {
+				color: white;
+			}
+
 
 			.content {
 				@include vendor('transition', (
@@ -2192,5 +2252,143 @@
 	}
 }
 
+.shows {
 
+	table {
+		width: 100%;
+		border: none;
+		background-color: rgba(22, 26, 29, 0.7);
 
+	}
+	
+	tr {
+		text-align: center; 
+		border: 1px solid rgba(188,188,188,0.25);
+	}
+	h2 {
+		text-align: center;
+	}
+	header {
+		flex: 0 0 100%;
+		text-align: center;
+		margin-top: 3em;
+
+		h2 {
+			font-size: 44px;
+			font-family: AT Triumvirate W03 Condensed;
+		}
+	}
+
+}
+
+// Phone.
+
+@mixin phone($image-width) {
+	@include vendor('flex-grow', '0');
+	@include vendor('flex-shrink', '0');
+	border-radius: 0;
+	border: solid _size(border-width);
+
+	img {
+		@include vendor('object-fit', 'cover');
+		@include vendor('object-position', 'center');
+		display: block;
+		width: 100%;
+		height: 100%;
+		border-radius: 0;
+	}
+
+	&:before {
+		content: '';
+		display: block;
+		background-position: center;
+		background-repeat: no-repeat;
+		border: solid _size(border-width);
+		border-bottom: 0;
+	}
+
+	&:after {
+		content: '';
+		display: block;
+		background-position: center;
+		background-repeat: no-repeat;
+		border: solid _size(border-width);
+		border-top: 0;
+	}
+
+	@include resize-phone($image-width, 1);
+}
+
+@mixin resize-phone($image-width, $image-factor) {
+	$image-pad-top: 2.5rem;
+	$image-pad-bottom: 3rem;
+	$image-height: ($image-width * (1920 / 1080));
+
+	width: ($image-width * $image-factor);
+	height: (($image-width * $image-factor) * (1920 / 1080));
+	margin-top: ($image-pad-top * $image-factor);
+	margin-bottom: (_size(element-margin) + ($image-pad-bottom * $image-factor));
+
+	&:before {
+		height: ($image-pad-top * $image-factor);
+		background-size: (64px * $image-factor) (32px * $image-factor);
+		margin-top: (($image-pad-top * $image-factor) * -1);
+		border-radius: (1rem * $image-factor) (1rem * $image-factor) 0 0;
+	}
+
+	&:after {
+		height: ($image-pad-bottom * $image-factor);
+		background-size: (64px * $image-factor) (32px * $image-factor);
+		margin-bottom: (($image-pad-bottom * $image-factor) * -1);
+		border-radius: 0 0 (1rem * $image-factor) (1rem * $image-factor);
+	}
+}
+
+@mixin color-phone($p) {
+	border-color: _palette($p, border);
+	background-color: _palette($p, border);
+
+	@if ($p != 'invert') {
+		border-width: 0;
+	}
+	@else {
+		border-width: _size(border-width);
+	}
+
+	&:before {
+		background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="64px" height="32px" viewBox="0 0 64 32" zoomAndPan="disable"><style>rect {fill: transparent; stroke: #{_palette($p, border)}; stroke-width: #{_size(border-width)}; }</style><rect rx="4" ry="4" x="11" y="12" width="42" height="8" vector-effect="non-scaling-stroke" /></svg>');
+		border-color: _palette($p, border);
+
+		@if ($p == 'invert') {
+			width: calc(100% + #{_size(border-width) * 2});
+			margin-left: (_size(border-width) * -1);
+		}
+		@else {
+			width: 100%;
+		}
+	}
+
+	&:after {
+		background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="64px" height="32px" viewBox="0 0 64 32" zoomAndPan="disable"><style>circle {fill: transparent; stroke: #{_palette($p, border)}; stroke-width: #{_size(border-width)}; }</style><circle cx="32" cy="16" r="14" vector-effect="non-scaling-stroke" /></svg>');
+		border-color: _palette($p, border);
+
+		@if ($p == 'invert') {
+			width: calc(100% + #{_size(border-width) * 2});
+			margin-left: (_size(border-width) * -1);
+		}
+		@else {
+			width: 100%;
+		}
+	}
+}
+
+@mixin color-phone-variant($v, $p) {
+	@if ($v == 'android') {
+		&:after {
+			background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="64px" height="32px" viewBox="0 0 64 32" zoomAndPan="disable"><style>rect {fill: transparent; stroke: #{_palette($p, border)}; stroke-width: #{_size(border-width)}; }</style><rect rx="4" ry="4" x="6" y="4" width="52" height="24" vector-effect="non-scaling-stroke" /></svg>');
+		}
+	}
+	@else if ($p == 'iphone') {
+		// ...
+	}
+}
