--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -136,7 +136,7 @@ em, i {
 }
 
 p {
-  margin: 0 0 2rem 0;
+  margin: 0 0 6rem 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -144,7 +144,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 800;
   letter-spacing: 0.225em;
   line-height: 1em;
-  margin: 0 0 1rem 0;
+  margin: 0 0 3rem 0;
   text-transform: uppercase;
 }
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -204,16 +204,16 @@ sup {
 hr {
   border: 0;
   border-bottom: solid 2px #fff;
-  margin: 3rem 0;
+  margin: 9rem 0;
 }
 hr.major {
-  margin: 4.5rem 0;
+  margin: 13.5rem 0;
 }
 
 blockquote {
   border-left: solid 4px #fff;
   font-style: italic;
-  margin: 0 0 2rem 0;
+  margin: 0 0 6rem 0;
   padding: 0.5em 0 0.5em 2em;
 }
 
@@ -231,7 +231,7 @@ pre {
   -webkit-overflow-scrolling: touch;
   font-family: "Courier New", monospace;
   font-size: 0.9em;
-  margin: 0 0 2rem 0;
+  margin: 0 0 6rem 0;
 }
 pre code {
   display: block;
@@ -1382,7 +1382,7 @@ header h6 + p {
   font-size: 0.9em;
 }
 header.major {
-  margin: 0 0 3.5rem 0;
+  margin: 0 0 10.5rem 0;
 }
 header.major h2, header.major h3, header.major h4, header.major h5, header.major h6 {
   border-bottom: solid 2px #fff;
@@ -1401,7 +1401,7 @@ header.major p {
 }
 @media screen and (max-width: 736px) {
   header.major {
-    margin: 0 0 2rem 0;
+    margin: 0 0 6rem 0;
   }
 }
 @media screen and (max-width: 980px) {
@@ -1412,7 +1412,7 @@ header.major p {
 
 /* Form */
 form {
-  margin: 0 0 2rem 0;
+  margin: 0 0 6rem 0;
 }
 
 label {
@@ -1420,7 +1420,7 @@ label {
   display: block;
   font-size: 0.9em;
   font-weight: 600;
-  margin: 0 0 1rem 0;
+  margin: 0 0 3rem 0;
 }
 
 input[type=text],
@@ -1577,7 +1577,7 @@ input[type=radio] + label:before {
 .box {
   border-radius: 3px;
   border: solid 2px #fff;
-  margin-bottom: 2rem;
+  margin-bottom: 6rem;
   padding: 1.5em;
 }
 .box > :last-child,
@@ -1681,7 +1681,7 @@ input[type=radio] + label:before {
 }
 .image.fit {
   display: block;
-  margin: 0 0 2rem 0;
+  margin: 0 0 6rem 0;
   width: 100%;
 }
 .image.fit img {
@@ -1691,7 +1691,7 @@ input[type=radio] + label:before {
 /* List */
 ol {
   list-style: decimal;
-  margin: 0 0 2rem 0;
+  margin: 0 0 6rem 0;
   padding-left: 1.25em;
 }
 ol li {
@@ -1700,7 +1700,7 @@ ol li {
 
 ul {
   list-style: disc;
-  margin: 0 0 2rem 0;
+  margin: 0 0 6rem 0;
   padding-left: 1em;
 }
 ul li {
@@ -1720,7 +1720,7 @@ ul.alt li:first-child {
 }
 
 dl {
-  margin: 0 0 2rem 0;
+  margin: 0 0 6rem 0;
 }
 
 /* Actions */
@@ -1730,11 +1730,11 @@ ul.actions {
   display: flex;
   cursor: default;
   list-style: none;
-  margin-left: -1rem;
+  margin-left: -3rem;
   padding-left: 0;
 }
 ul.actions li {
-  padding: 0 0 0 1rem;
+  padding: 0 0 0 3rem;
   vertical-align: middle;
 }
 ul.actions.special {
@@ -1753,13 +1753,13 @@ ul.actions.stacked {
   margin-left: 0;
 }
 ul.actions.stacked li {
-  padding: 1rem 0 0 0;
+  padding: 3rem 0 0 0;
 }
 ul.actions.stacked li:first-child {
   padding-top: 0;
 }
 ul.actions.fit {
-  width: calc(100% + 1rem);
+  width: calc(100% + 3rem);
 }
 ul.actions.fit li {
   -moz-flex-grow: 1;
@@ -1788,7 +1788,7 @@ ul.actions.fit.stacked {
     flex-grow: 1;
     -ms-flex-shrink: 1;
     flex-shrink: 1;
-    padding: 1rem 0 0 0;
+    padding: 3rem 0 0 0;
     text-align: center;
     width: 100%;
   }
@@ -1846,7 +1846,7 @@ ul.icons.major li {
 }
 
 table {
-  margin: 0 0 2rem 0;
+  margin: 0 0 6rem 0;
   width: 100%;
 }
 table tbody tr {
@@ -2026,7 +2026,7 @@ button,
   width: 100%;
 }
 .features li {
-  padding: 4em 4em max(0.1rem, 4em - 2rem + 0) 6em;
+  padding: 4em 4em max(0.1rem, 4em - 6rem + 0) 6em;
   display: block;
   position: relative;
   text-align: left;
@@ -2084,19 +2084,19 @@ button,
 }
 @media screen and (max-width: 980px) {
   .features li {
-    padding: 3em 2em max(0.1rem, 3em - 2rem + 0) 2em;
+    padding: 3em 2em max(0.1rem, 3em - 6rem + 0) 2em;
     text-align: center;
   }
   .features li:before {
     left: 0;
-    margin: 0 0 1rem 0;
+    margin: 0 0 3rem 0;
     position: relative;
     top: 0;
   }
 }
 @media screen and (max-width: 736px) {
   .features li {
-    padding: 3em 0 max(0.1rem, 3em - 2rem + 0) 0;
+    padding: 3em 0 max(0.1rem, 3em - 6rem + 0) 0;
     background-color: transparent !important;
     border-top: solid 2px #fff;
     width: 100%;
@@ -2116,23 +2116,24 @@ button,
   display: flex;
 }
 .spotlight .image {
-  -moz-order: 1;
-  -ms-order: 1;
-  order: 1;
+  -moz-order: 2;
+  -ms-order: 2;
+  order: 2;
   border-radius: 0;
   width: 40%;
 }
 .spotlight .image img {
   border-radius: 0;
   display: block;
-  width: 100%;
+  width: auto;
   height: auto;
+  max-height: 100vh;
 }
 .spotlight .content {
-  padding: 2em 4em max(0.1rem, 2em - 2rem + 0) 4em;
-  -moz-order: 2;
-  -ms-order: 2;
-  order: 2;
+  padding: 2em 4em max(0.1rem, 2em - 6rem + 0) 4em;
+  -moz-order: 1;
+  -ms-order: 1;
+  order: 1;
   max-width: 48em;
   width: 60%;
   margin: auto;
@@ -2190,7 +2191,7 @@ button,
     width: 100%;
   }
   .spotlight .content {
-    padding: 4em 3em max(0.1rem, 4em - 2rem + 0) 3em;
+    padding: 4em 3em max(0.1rem, 4em - 6rem + 0) 3em;
     max-width: none;
     text-align: center;
     width: 100%;
@@ -2198,13 +2199,13 @@ button,
 }
 @media screen and (max-width: 736px) {
   .spotlight .content {
-    padding: 3em 2em max(0.1rem, 3em - 2rem + 0) 2em;
+    padding: 3em 2em max(0.1rem, 3em - 6rem + 0) 2em;
   }
 }
 
 /* Wrapper */
 .wrapper {
-  padding: 6em 0 max(0.1rem, 6em - 2rem + 0) 0;
+  padding: 6em 0 max(0.1rem, 6em - 6rem + 0) 0;
 }
 .wrapper > .inner {
   width: 60em;
@@ -2482,12 +2483,12 @@ button,
 }
 @media screen and (max-width: 980px) {
   .wrapper {
-    padding: 4em 3em max(0.1rem, 4em - 2rem + 0) 3em;
+    padding: 4em 3em max(0.1rem, 4em - 6rem + 0) 3em;
   }
 }
 @media screen and (max-width: 736px) {
   .wrapper {
-    padding: 3em 2em max(0.1rem, 3em - 2rem + 0) 2em;
+    padding: 3em 2em max(0.1rem, 3em - 6rem + 0) 2em;
   }
 }
 
@@ -2705,6 +2706,7 @@ body.is-menu-visible #menu {
   padding: 0.35em 1em;
   position: relative;
   z-index: 1;
+  vertical-align: top;
 }
 #banner img:before, #banner img:after {
   transition: width 0.85s ease;
@@ -2730,6 +2732,14 @@ body.is-menu-visible #menu {
 }
 #banner p a {
   color: inherit;
+}
+#banner div p {
+  margin: 6rem 0 0 0;
+  font-size: 34px;
+  font-family: AT Triumvirate W03 Condensed;
+}
+#banner div a {
+  margin-top: 2em;
 }
 #banner .more {
   transition: transform 0.75s ease, opacity 0.75s ease;
@@ -2782,7 +2792,7 @@ body.is-menu-visible #menu {
 }
 @media screen and (max-width: 736px) {
   #banner {
-    padding: 7em 3em max(0.1rem, 7em - 2rem + 0) 3em;
+    padding: 7em 3em max(0.1rem, 7em - 6rem + 0) 3em;
     height: auto;
     min-height: 0;
   }
@@ -2823,7 +2833,6 @@ body.is-preload #banner:after {
   -ms-justify-content: center;
   justify-content: center;
   cursor: default;
-  height: 100vh;
   min-height: 35em;
   overflow: hidden;
   position: relative;
@@ -2893,7 +2902,7 @@ body.is-preload #banner:after {
 
 /* Main */
 #main > header {
-  padding: 12em 0 max(0.1rem, 12em - 2rem + 0) 0;
+  padding: 12em 0 max(0.1rem, 12em - 6rem + 0) 0;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../../images/banner.png");
   background-attachment: fixed;
   background-position: center center;
@@ -2903,7 +2912,7 @@ body.is-preload #banner:after {
 }
 #main > header h2 {
   font-size: 1.75em;
-  margin: 0 0 0.5rem 0;
+  margin: 0 0 1.5rem 0;
 }
 #main > header p {
   color: inherit;
@@ -2916,26 +2925,26 @@ body.is-preload #banner:after {
 }
 @media screen and (max-width: 1680px) {
   #main > header {
-    padding: 10em 0 max(0.1rem, 10em - 2rem + 0) 0;
+    padding: 10em 0 max(0.1rem, 10em - 6rem + 0) 0;
   }
 }
 @media screen and (max-width: 1280px) {
   #main > header {
-    padding: 8em 3em max(0.1rem, 8em - 2rem + 0) 3em;
+    padding: 8em 3em max(0.1rem, 8em - 6rem + 0) 3em;
   }
 }
 @media screen and (max-width: 980px) {
   #main > header {
-    padding: 10em 3em max(0.1rem, 10em - 2rem + 0) 3em;
+    padding: 10em 3em max(0.1rem, 10em - 6rem + 0) 3em;
   }
 }
 @media screen and (max-width: 736px) {
   #main > header {
-    padding: 5em 3em max(0.1rem, 5em - 2rem + 0) 3em;
+    padding: 5em 3em max(0.1rem, 5em - 6rem + 0) 3em;
   }
   #main > header h2 {
     font-size: 1.25em;
-    margin: 0 0 1rem 0;
+    margin: 0 0 3rem 0;
   }
 }
 
@@ -2945,20 +2954,23 @@ body.is-mobile #main > header {
 
 /* Footer */
 #footer {
-  padding: 6em 0 max(0.1rem, 6em - 2rem + 0) 0;
+  padding: 6em 0 4em 0;
   background-color: #1d242a;
   text-align: center;
-  padding-top: 1em;
 }
+
 #footer .icons {
   font-size: 1.25em;
 }
+
 #footer .icons a {
   color: rgba(255, 255, 255, 0.5);
 }
+
 #footer .icons a:hover {
   color: #fff;
 }
+
 #footer .copyright {
   color: rgba(255, 255, 255, 0.5);
   font-size: 0.8em;
@@ -2967,6 +2979,7 @@ body.is-mobile #main > header {
   padding: 0;
   text-transform: uppercase;
 }
+
 #footer .copyright li {
   border-left: solid 1px rgba(255, 255, 255, 0.5);
   display: inline-block;
@@ -2974,17 +2987,21 @@ body.is-mobile #main > header {
   margin-left: 1em;
   padding-left: 1em;
 }
+
 #footer .copyright li:first-child {
   border-left: 0;
   margin-left: 0;
   padding-left: 0;
 }
+
 #footer .copyright li a {
   color: inherit;
 }
+
 #footer .copyright li a:hover {
   color: #fff;
 }
+
 @media screen and (max-width: 480px) {
   #footer .copyright li {
     border: 0;
@@ -2996,15 +3013,14 @@ body.is-mobile #main > header {
 }
 @media screen and (max-width: 980px) {
   #footer {
-    padding: 4em 3em max(0.1rem, 4em - 2rem + 0) 3em;
+    padding: 4em 3em 2em 3em;
   }
 }
 @media screen and (max-width: 736px) {
   #footer {
-    padding: 3em 2em max(0.1rem, 3em - 2rem + 0) 2em;
+    padding: 3em 2em 1em 2em;
   }
 }
-
 /* Landing */
 body.landing #page-wrapper {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../../images/banner.png");
@@ -3042,7 +3058,6 @@ body.is-mobile.landing #footer {
   margin: 0 0 0 0;
   justify-content: center;
   align-items: center;
-  height: 80vh;
   background-color: rgba(22, 26, 29, 0.3);
 }
 .tiles header {
@@ -3057,7 +3072,7 @@ body.is-mobile.landing #footer {
 .tiles article {
   transition: transform 0.5s ease, opacity 0.5s ease;
   position: relative;
-  width: calc(20% - 1.5em);
+  width: calc(18% - 1.5em);
   margin: 1.5em 0 1.5em 1.5em;
 }
 .tiles article > .image {
