--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1063,21 +1063,22 @@
 		@include vendor('display', 'flex');
 
 		.image {
-			@include vendor('order', '1');
+			@include vendor('order', '2');
 			border-radius: 0;
 			width: 40%;
 
 			img {
 				border-radius: 0;
 				display: block;
-				width: 100%;
-				height: auto;
+				width: auto;
+  				height: auto;
+				max-height: 100vh;
 			}
 		}
 
 		.content {
 			@include padding(2em, 4em);
-			@include vendor('order', '2');
+			@include vendor('order', '1');
 			max-width: 48em;
 			width: 60%;
 			margin: auto;
@@ -1601,6 +1602,7 @@
 			padding: 0.35em 1em;
 			position: relative;
 			z-index: 1;
+			vertical-align: top;
 
 			&:before, &:after {
 				@include vendor('transition', 'width 0.85s ease');
@@ -1631,6 +1633,16 @@
 			a {
 				color: inherit;
 			}
+		}
+
+		div p {
+			margin: 6rem 0 0 0;
+			font-size: 34px;		
+			font-family: AT Triumvirate W03 Condensed;
+		}
+
+		div a {
+			margin-top: 2em;
 		}
 
 		.more {
@@ -1731,7 +1743,6 @@
 	@include vendor('flex-direction', 'column');
 	@include vendor('justify-content', 'center');
 	cursor: default;
-	height: 100vh;
 	min-height: 35em;
 	overflow: hidden;
 	position: relative;
@@ -1871,70 +1882,81 @@
 
 /* Footer */
 
-	#footer {
-		@include padding(6em, 0);
-		background-color: darken(_palette(bg), 8);
-		text-align: center;
-		padding-top: 1em;
+#footer {
+	padding: 6em 0 4em 0 ;
+	background-color: #1d242a;
+	text-align: center;
+}
 
-		.icons {
-			font-size: 1.25em;
+	#footer .icons {
+		font-size: 1.25em;
+	}
 
-			a {
-				color: _palette(fg-light);
-
-				&:hover {
-					color: _palette(fg);
-				}
-			}
+		#footer .icons a {
+			color: rgba(255, 255, 255, 0.5);
 		}
 
-		.copyright {
-			color: _palette(fg-light);
-			font-size: 0.8em;
-			letter-spacing: _size(letter-spacing-alt);
-			list-style: none;
-			padding: 0;
-			text-transform: uppercase;
+			#footer .icons a:hover {
+				color: #fff;
+			}
 
-			li {
-				border-left: solid 1px _palette(fg-light);
-				display: inline-block;
-				line-height: 1em;
-				margin-left: 1em;
-				padding-left: 1em;
+	#footer .copyright {
+		color: rgba(255, 255, 255, 0.5);
+		font-size: 0.8em;
+		letter-spacing: 0.225em;
+		list-style: none;
+		padding: 0;
+		text-transform: uppercase;
+	}
 
-				&:first-child {
-					border-left: 0;
-					margin-left: 0;
-					padding-left: 0;
+		#footer .copyright li {
+			border-left: solid 1px rgba(255, 255, 255, 0.5);
+			display: inline-block;
+			line-height: 1em;
+			margin-left: 1em;
+			padding-left: 1em;
+		}
+
+			#footer .copyright li:first-child {
+				border-left: 0;
+				margin-left: 0;
+				padding-left: 0;
+			}
+
+			#footer .copyright li a {
+				color: inherit;
+			}
+
+				#footer .copyright li a:hover {
+					color: #fff;
 				}
 
-				a {
-					color: inherit;
+			@media screen and (max-width: 480px) {
 
-					&:hover {
-						color: _palette(fg);
-					}
-				}
-
-				@include breakpoint('<=xsmall') {
+				#footer .copyright li {
 					border: 0;
 					display: block;
 					line-height: 1.65em;
 					margin: 0;
 					padding: 0.5em 0;
 				}
+
 			}
+
+	@media screen and (max-width: 980px) {
+
+		#footer {
+			padding: 4em 3em 2em 3em ;
 		}
 
-		@include breakpoint('<=medium') {
-			@include padding(4em, 3em);
+	}
+
+	@media screen and (max-width: 736px) {
+
+		#footer {
+			padding: 3em 2em 1em 2em ;
 		}
 
-		@include breakpoint('<=small') {
-			@include padding(3em, 2em);
-		}
 	}
 
 /* Landing */
@@ -1994,7 +2016,6 @@
 	margin: 0 0 0 0;
 	justify-content: center;
 	align-items: center;
-	height: 80vh;
 	background-color:rgba(22, 26, 29, 0.3);
 
 	header {
@@ -2014,7 +2035,7 @@
 			'opacity #{$duration} #{$ease}'
 		));
 		position: relative;
-		width: calc(#{(100% / 5)} - #{$gutter * 1});
+		width: calc(#{(90% / 5)} - #{$gutter * 1});
 		margin: $gutter 0 $gutter $gutter;
 
 		> .image {
