--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1603,6 +1603,7 @@
 			position: relative;
 			z-index: 1;
 			vertical-align: top;
+			max-width: 100vw;
 
 			&:before, &:after {
 				@include vendor('transition', 'width 0.85s ease');
@@ -1639,6 +1640,19 @@
 			margin: 6rem 0 0 0;
 			font-size: 34px;		
 			font-family: AT Triumvirate W03 Condensed;
+		}
+
+		div p {
+			margin: 6rem 0 0 0;
+			font-size: 34px;		
+			font-family: AT Triumvirate W03 Condensed;
+
+			@media only screen and (max-width: 600px) {
+				margin: 6rem 0 0 0;
+				font-size: 24px;		
+				font-family: AT Triumvirate W03 Condensed;
+			
+			}
 		}
 
 		div a {
@@ -1978,10 +1992,7 @@
 
 	body.is-mobile {
 		&.landing {
-			#page-wrapper {
-				background: none;
-			}
-
+			
 			#banner,
 			.wrapper.style4 {
 				background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.5)), to(rgba(0,0,0,0.5))), url("../../images/banner.png");
