--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2128,6 +2128,12 @@ button,
   width: auto;
   height: auto;
   max-height: 100vh;
+  max-width: 100vw;
+}
+@media only screen and (max-width: 820px) {
+  .spotlight .image img {
+    max-height: none;
+  }
 }
 .spotlight .content {
   padding: 2em 4em max(0.1rem, 2em - 6rem + 0) 4em;
@@ -2137,6 +2143,13 @@ button,
   max-width: 48em;
   width: 60%;
   margin: auto;
+}
+.spotlight .content p {
+  padding: 2em 1em 1em 2em;
+  -webkit-hyphens: auto;
+      -ms-hyphens: auto;
+          hyphens: auto;
+  text-align: justify;
 }
 .spotlight:nth-child(2n) {
   -moz-flex-direction: row-reverse;
@@ -2690,7 +2703,7 @@ body.is-menu-visible #menu {
   -ms-justify-content: center;
   justify-content: center;
   cursor: default;
-  height: 100vh;
+  height: 100vh !important;
   min-height: 35em;
   overflow: hidden;
   position: relative;
@@ -2707,6 +2720,7 @@ body.is-menu-visible #menu {
   position: relative;
   z-index: 1;
   vertical-align: top;
+  max-width: 100vw;
 }
 #banner img:before, #banner img:after {
   transition: width 0.85s ease;
@@ -2737,6 +2751,18 @@ body.is-menu-visible #menu {
   margin: 6rem 0 0 0;
   font-size: 34px;
   font-family: AT Triumvirate W03 Condensed;
+}
+#banner div p {
+  margin: 6rem 0 0 0;
+  font-size: 34px;
+  font-family: AT Triumvirate W03 Condensed;
+}
+@media only screen and (max-width: 600px) {
+  #banner div p {
+    margin: 6rem 0 0 0;
+    font-size: 24px;
+    font-family: AT Triumvirate W03 Condensed;
+  }
 }
 #banner div a {
   margin-top: 2em;
@@ -2837,18 +2863,35 @@ body.is-preload #banner:after {
   overflow: hidden;
   position: relative;
   text-align: center;
+  max-height: 100vh;
+}
+#video video {
+  display: block;
+  margin: auto;
+}
+@media only screen and (max-width: 600px) {
+  #video video {
+    transform: translate(-40%, 0);
+  }
 }
 #video div.content {
   position: absolute;
-  left: 37%;
-  bottom: 40px;
+  left: 50%;
+  bottom: 10%;
+  transform: translate(-50%, 0);
 }
 #video div.content p {
   margin-bottom: 1rem;
   font-size: 44px;
   font-family: AT Triumvirate W03 Condensed;
   color: #68c1ec;
-  font-weight: 500 !important;
+  font-weight: 500;
+}
+@media only screen and (max-width: 600px) {
+  #video div.content p {
+    font-size: 25px;
+    margin-bottom: 0;
+  }
 }
 #video div.content .button {
   color: #68c1ec;
@@ -3034,9 +3077,6 @@ body.landing #footer {
   background-color: rgba(29, 36, 42, 0.9);
 }
 
-body.is-mobile.landing #page-wrapper {
-  background: none;
-}
 body.is-mobile.landing #banner,
 body.is-mobile.landing .wrapper.style4 {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../../images/banner.png");
@@ -3056,6 +3096,8 @@ body.is-mobile.landing #footer {
   flex-wrap: wrap;
   position: relative;
   margin: 0 0 0 0;
+  padding-top: 3em;
+  padding-bottom: 7em;
   justify-content: center;
   align-items: center;
   background-color: rgba(22, 26, 29, 0.3);
@@ -3240,7 +3282,7 @@ body.is-touch .tiles article .content {
   }
   .tiles article {
     width: 100%;
-    margin: 0.75em 0 0 0;
+    margin: 0 0 0 0;
   }
 }
 
