--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1073,6 +1073,13 @@
 				width: auto;
   				height: auto;
 				max-height: 100vh;
+				max-width: 100vw;
+
+				@media only screen and (max-width: 820px) {
+					max-height: none;
+				}
+
+				
 			}
 		}
 
@@ -1082,6 +1089,12 @@
 			max-width: 48em;
 			width: 60%;
 			margin: auto;
+
+			p {
+				padding: 2em 1em 1em 2em;
+				hyphens: auto; 
+				text-align: justify
+			}
 		}
 
 		&:nth-child(2n) {
@@ -1586,7 +1599,7 @@
 		@include vendor('flex-direction', 'column');
 		@include vendor('justify-content', 'center');
 		cursor: default;
-		height: 100vh;
+		height: 100vh !important;
 		min-height: 35em;
 		overflow: hidden;
 		position: relative;
@@ -1761,11 +1774,25 @@
 	overflow: hidden;
 	position: relative;
 	text-align: center;
+	max-height: 100vh;
+
+	video {
+		display: block;
+		margin: auto;
+
+		@media only screen and (max-width: 600px) {
+			-ms-transform: translate(-40%,0);
+			-moz-transform: translate(-40%,0);
+			-webkit-transform: translate(-40%,0);
+			transform: translate(-40%,0);
+		}
+	}
 
 	div.content {
 		position: absolute;
-		left: 37%;
-		bottom: 40px;		
+		left: 50%;
+		bottom: 10%;
+    	transform: translate(-50%, 0);
 		
 
 		p {
@@ -1773,8 +1800,18 @@
 			font-size: 44px;		
 			font-family: AT Triumvirate W03 Condensed;
 			color: #68c1ec;
-			font-weight: 500 !important;
+			font-weight: 500;
 		}
+
+		@media only screen and (max-width: 600px) {
+			p {
+				font-size: 25px;
+				margin-bottom: 0;
+
+			}
+			
+		}
+		
 
 		.button {
 			color: #68c1ec;
@@ -2025,6 +2062,8 @@
 	@include vendor('flex-wrap', 'wrap');
 	position: relative;
 	margin: 0 0 0 0;
+	padding-top: 3em;
+	padding-bottom: 7em;
 	justify-content: center;
 	align-items: center;
 	background-color:rgba(22, 26, 29, 0.3);
@@ -2279,7 +2318,7 @@
 
 		article {
 			width: 100%;
-			margin: $gutter 0 0 0;
+			margin: 0 0 0 0;
 		}
 	}
 }
