--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 @import 'fontawesome-all.min.css';
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,800,800italic");
+@import url("//db.onlinewebfonts.com/c/ea7f8f171d63faf100ccd8a08773a656?family=ATTriumvirateCondensed");
 /*
 	Spectral by HTML5 UP
 	html5up.net | @ajlkn
@@ -220,7 +221,7 @@ blockquote {
 code {
   background: rgba(144, 144, 144, 0.25);
   border-radius: 3px;
-  font-family: "Courier New", monospace;
+  font-family: "ATTriumvirateCondensed", monospace;
   font-size: 0.9em;
   letter-spacing: 0;
   margin: 0 0.25em;
@@ -229,7 +230,7 @@ code {
 
 pre {
   -webkit-overflow-scrolling: touch;
-  font-family: "Courier New", monospace;
+  font-family: "ATTriumvirateCondensed", monospace;
   font-size: 0.9em;
   margin: 0 0 6rem 0;
 }
@@ -2149,6 +2150,7 @@ button,
       -ms-hyphens: auto;
           hyphens: auto;
   text-align: justify;
+  font-family: "ATTriumvirateCondensed", monospace;
 }
 .spotlight:nth-child(2n) {
   -moz-flex-direction: row-reverse;
@@ -2707,7 +2709,7 @@ body.is-menu-visible #menu {
   overflow: hidden;
   position: relative;
   text-align: center;
-  font-family: "AT Triumvirate W03 Condensed";
+  font-family: "ATTriumvirateCondensed", monospace;
 }
 #banner img {
   transform: scale(1);
@@ -2749,18 +2751,18 @@ body.is-menu-visible #menu {
 #banner div p {
   margin: 6rem 0 0 0;
   font-size: 34px;
-  font-family: AT Triumvirate W03 Condensed;
+  font-family: "ATTriumvirateCondensed", monospace;
 }
 #banner div p {
   margin: 6rem 0 0 0;
   font-size: 34px;
-  font-family: AT Triumvirate W03 Condensed;
+  font-family: "ATTriumvirateCondensed", monospace;
 }
 @media only screen and (max-width: 600px) {
   #banner div p {
     margin: 6rem 0 0 0;
     font-size: 24px;
-    font-family: AT Triumvirate W03 Condensed;
+    font-family: "ATTriumvirateCondensed", monospace;
   }
 }
 #banner div a {
@@ -2882,7 +2884,7 @@ body.is-preload #banner:after {
 #video div.content p {
   margin-bottom: 1rem;
   font-size: 44px;
-  font-family: AT Triumvirate W03 Condensed;
+  font-family: "ATTriumvirateCondensed", monospace;
   color: #68c1ec;
   font-weight: 500;
 }
@@ -2890,11 +2892,13 @@ body.is-preload #banner:after {
   #video div.content p {
     font-size: 25px;
     margin-bottom: 0;
+    font-family: "ATTriumvirateCondensed", monospace;
   }
 }
 #video div.content .button {
   color: #68c1ec;
   box-shadow: none;
+  font-family: "ATTriumvirateCondensed", monospace;
 }
 
 /* CTA */
@@ -3108,7 +3112,7 @@ body.is-mobile.landing #footer {
 }
 .tiles header h2 {
   font-size: 44px;
-  font-family: AT Triumvirate W03 Condensed;
+  font-family: "ATTriumvirateCondensed", monospace;
 }
 .tiles article {
   transition: transform 0.5s ease, opacity 0.5s ease;
@@ -3205,6 +3209,7 @@ body.is-mobile.landing #footer {
   line-height: 1.5;
   margin-top: 0.35em;
   opacity: 0;
+  font-family: "ATTriumvirateCondensed", monospace;
 }
 .tiles article > a .content > :last-child {
   margin-bottom: 0;
@@ -3293,6 +3298,7 @@ body.is-touch .tiles article .content {
 .shows tr {
   text-align: center;
   border: 1px solid rgba(188, 188, 188, 0.25);
+  font-family: "ATTriumvirateCondensed", monospace;
 }
 .shows h2 {
   text-align: center;
@@ -3304,5 +3310,5 @@ body.is-touch .tiles article .content {
 }
 .shows header h2 {
   font-size: 44px;
-  font-family: AT Triumvirate W03 Condensed;
+  font-family: "ATTriumvirateCondensed", monospace;
 }/*# sourceMappingURL=main.css.map */
