--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -37,7 +37,7 @@
 // Font.
 	$font: (
 		family:				('Open Sans', Helvetica, sans-serif),
-		family-fixed:		('ATTriumvirateCondensed', monospace),
+		family-fixed:		('ATTriumvirateCondensed'),
 		weight:				400,
 		weight-bold:		600,
 		weight-extrabold:	800
