--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,5 @@
 @import 'fontawesome-all.min.css';
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,800,800italic");
-@import url("//db.onlinewebfonts.com/c/ea7f8f171d63faf100ccd8a08773a656?family=ATTriumvirateCondensed");
 /*
 	Spectral by HTML5 UP
 	html5up.net | @ajlkn
@@ -221,7 +220,7 @@ blockquote {
 code {
   background: rgba(144, 144, 144, 0.25);
   border-radius: 3px;
-  font-family: "ATTriumvirateCondensed";
+  font-family: "Courier New", monospace;
   font-size: 0.9em;
   letter-spacing: 0;
   margin: 0 0.25em;
@@ -230,7 +229,7 @@ code {
 
 pre {
   -webkit-overflow-scrolling: touch;
-  font-family: "ATTriumvirateCondensed";
+  font-family: "Courier New", monospace;
   font-size: 0.9em;
   margin: 0 0 6rem 0;
 }
@@ -2150,7 +2149,6 @@ button,
       -ms-hyphens: auto;
           hyphens: auto;
   text-align: justify;
-  font-family: "ATTriumvirateCondensed";
 }
 .spotlight:nth-child(2n) {
   -moz-flex-direction: row-reverse;
@@ -2709,7 +2707,7 @@ body.is-menu-visible #menu {
   overflow: hidden;
   position: relative;
   text-align: center;
-  font-family: "ATTriumvirateCondensed";
+  font-family: "AT Triumvirate W03 Condensed";
 }
 #banner img {
   transform: scale(1);
@@ -2751,18 +2749,18 @@ body.is-menu-visible #menu {
 #banner div p {
   margin: 6rem 0 0 0;
   font-size: 34px;
-  font-family: "ATTriumvirateCondensed";
+  font-family: AT Triumvirate W03 Condensed;
 }
 #banner div p {
   margin: 6rem 0 0 0;
   font-size: 34px;
-  font-family: "ATTriumvirateCondensed";
+  font-family: AT Triumvirate W03 Condensed;
 }
 @media only screen and (max-width: 600px) {
   #banner div p {
     margin: 6rem 0 0 0;
     font-size: 24px;
-    font-family: "ATTriumvirateCondensed";
+    font-family: AT Triumvirate W03 Condensed;
   }
 }
 #banner div a {
@@ -2884,7 +2882,7 @@ body.is-preload #banner:after {
 #video div.content p {
   margin-bottom: 1rem;
   font-size: 44px;
-  font-family: "ATTriumvirateCondensed";
+  font-family: AT Triumvirate W03 Condensed;
   color: #68c1ec;
   font-weight: 500;
 }
@@ -2892,13 +2890,11 @@ body.is-preload #banner:after {
   #video div.content p {
     font-size: 25px;
     margin-bottom: 0;
-    font-family: "ATTriumvirateCondensed";
   }
 }
 #video div.content .button {
   color: #68c1ec;
   box-shadow: none;
-  font-family: "ATTriumvirateCondensed";
 }
 
 /* CTA */
@@ -3112,7 +3108,7 @@ body.is-mobile.landing #footer {
 }
 .tiles header h2 {
   font-size: 44px;
-  font-family: "ATTriumvirateCondensed";
+  font-family: AT Triumvirate W03 Condensed;
 }
 .tiles article {
   transition: transform 0.5s ease, opacity 0.5s ease;
@@ -3209,7 +3205,6 @@ body.is-mobile.landing #footer {
   line-height: 1.5;
   margin-top: 0.35em;
   opacity: 0;
-  font-family: "ATTriumvirateCondensed";
 }
 .tiles article > a .content > :last-child {
   margin-bottom: 0;
@@ -3298,7 +3293,6 @@ body.is-touch .tiles article .content {
 .shows tr {
   text-align: center;
   border: 1px solid rgba(188, 188, 188, 0.25);
-  font-family: "ATTriumvirateCondensed";
 }
 .shows h2 {
   text-align: center;
@@ -3310,5 +3304,5 @@ body.is-touch .tiles article .content {
 }
 .shows header h2 {
   font-size: 44px;
-  font-family: "ATTriumvirateCondensed";
+  font-family: AT Triumvirate W03 Condensed;
 }/*# sourceMappingURL=main.css.map */
