--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2124,7 +2124,7 @@ button,
   display: block;
   width: auto;
   height: auto;
-  max-height: 100vh;
+  max-height: 90vh;
   max-width: 100vw;
 }
 @media only screen and (max-width: 820px) {
@@ -2142,19 +2142,14 @@ button,
 }
 .spotlight .content p {
   padding: 2em 1em 1em 2em;
+  margin: 0 0 2em 0;
   -webkit-hyphens: auto;
       -ms-hyphens: auto;
           hyphens: auto;
   text-align: justify;
 }
-.spotlight .content ul {
-  list-style: none;
-  width: 100%;
-  padding: 2em 1em 1em 2em;
-}
-.spotlight .content ul li {
-  display: inline-block;
-  width: 24%;
+.spotlight .content td {
+  text-align: center;
 }
 .spotlight:nth-child(2n) {
   -moz-flex-direction: row-reverse;
@@ -3297,14 +3292,27 @@ body.is-touch .tiles article .content {
 }
 
 .shows table {
-  width: 100%;
+  width: 80%;
   border: none;
   background-color: rgba(22, 26, 29, 0.7);
   table-layout: fixed;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media only screen and (max-width: 600px) {
+  .shows table {
+    width: 100%;
+  }
 }
 .shows tr {
   text-align: center;
   border: 1px solid rgba(188, 188, 188, 0.25);
+}
+.shows td.text-right {
+  text-align: right;
+}
+.shows td.text-left {
+  text-align: left;
 }
 .shows h2 {
   text-align: center;
