--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1071,7 +1071,7 @@
 				display: block;
 				width: auto;
   				height: auto;
-				max-height: 100vh;
+				max-height: 90vh;
 				max-width: 100vw;
 
 				@media only screen and (max-width: 820px) {
@@ -1090,21 +1090,14 @@
 
 			p {
 				padding: 2em 1em 1em 2em;
+				margin: 0 0 2em 0;
 				hyphens: auto; 
 				text-align: justify
 			}
 
-			ul {
-				list-style: none;
-				width: 100%;
-				padding: 2em 1em 1em 2em;
+			td {
+				text-align: center;
 			}
-			
-			ul li {
-				display: inline-block;
-				width: 24%;
-			}
-			
 		}
 
 		&:nth-child(2n) {
@@ -2344,15 +2337,29 @@
 .shows {
 
 	table {
-		width: 100%;
+		width: 80%;
 		border: none;
 		background-color: rgba(22, 26, 29, 0.7);
 		table-layout: fixed;
+		margin-left: auto;
+  		margin-right: auto;
+	}
+
+	@media only screen and (max-width: 600px) {
+		table {
+			width: 100%;
+		}
 	}
 	
 	tr {
 		text-align: center; 
 		border: 1px solid rgba(188,188,188,0.25);
+	}
+	td.text-right {
+		text-align: right;
+	}
+	td.text-left {
+		text-align: left;
 	}
 	h2 {
 		text-align: center;
